upgrading rdf4j, among others